--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,8 @@ services:
       - 'POSTGRES_PASSWORD=secret'
     ports:
       - '5432:5432'
+    volumes:
+      - './db_data:/var/lib/postgresql/data'
   bucket:
     image: 'quay.io/minio/minio'
     command: server /data --console-address ":9001"
